@@ -7,7 +7,6 @@
 // and others.  All Rights Reserved.
 // You must accept the terms of that agreement to use this software.
 //
-#ifdef JIKES_DEBUG
 
 #include "platform.h"
 #include "javasym.h"
@@ -19,6 +18,9 @@
 #include <iostream.h>
 #include <stdio.h>
 */
+
+
+#ifdef JIKES_DEBUG
 
 #ifdef	HAVE_JIKES_NAMESPACE
 namespace Jikes {	// Open namespace Jikes block
